@@ -4,6 +4,10 @@
 # Copyright 2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_xdvipdfmx=$BinDir/xdvipdfmx$ExeExt
+
 TEXMFCNF=$srcdir/../kpathsea
 TFMFONTS="$srcdir/tests;$srcdir/data"
 T1FONTS="$srcdir/tests;$srcdir/data"
@@ -15,14 +19,14 @@ export TEXMFCNF TFMFONTS T1FONTS TEXFONTMAPS DVIPDFMXINPUTS TEXPICTS
 failed=
 
 echo "*** xdvipdfmx -v -m 1.0 -o paper2.pdf <paper.dvi" && echo \
-	&& ./xdvipdfmx -v -m 1.0 -o paper2.pdf <$srcdir/tests/paper.dvi \
+	&& $_xdvipdfmx -v -m 1.0 -o paper2.pdf <$srcdir/tests/paper.dvi \
 	&& echo && echo "xdvipdfmx-paper tests OK" && echo \
-	|| failed="$failed xdvipdfmx-paper"	
+	|| failed="$failed xdvipdfmx-paper"
 
 echo "*** xdvipdfmx -v -m 1.4 -o - paper >paper2m.pdf" && echo \
-	&& ./xdvipdfmx -v -m 1.4 -o - $srcdir/tests/paper >paper2m.pdf \
+	&& $_xdvipdfmx -v -m 1.4 -o - $srcdir/tests/paper >paper2m.pdf \
 	&& echo && echo "xdvipdfmx-paper-mag tests OK" && echo \
-	|| failed="$failed xdvipdfmx-paper-mag"	
+	|| failed="$failed xdvipdfmx-paper-mag"
 
 test -z "$failed" && exit 0
 echo
